bin/testsuite/tests/compiler/src/errors/compiler2171.swg
#global testerror "Err0249"

func toto()->{ x: s32, y: s32 }
{
    return {x: 0, x: 1}
}
